2010-08-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c:  OSX history command could segfault if there was no
	previous history file.

	* docs/gnuplot.doc:  Reorganize documentation for binary files.

2010-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/plot.c: More work to enable autoconfigue on OSX.

2010-08-08  Olivier Mehani  <shtrom@users.sourceforge.net>

	* src/util.c docs/gnuplot.doc:  Add ISO-IEC-80000 prefixes
	(ki Mi Gi etc) as gprintf format specifiers %b and %B, which are
	respectively the mantissa and exponent.  Also fix an out-of-range
	formatting bug.

2010-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Do not create a data record for a blank line at the end
	of the input stream.
	Bugfix.

	* src/plot2d.c (eval_plots):  Update GPVAL_DATA values after plot in
	tabulate mode just as for normal plotting mode.
	Bug #3041233

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h:
	New option "set key opaque".   If requested, the code makes two passes
	over each 2D plot command.  The actual graph is drawn during the first
	pass, and the key box with plot samples is drawn during the second pass.

2010-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/command.c src/history.c src/mouse.c src/plot.c
	src/show.c:

	Finally a work-around for the broken libreadline on OSX, which is really
	a wrapper for some version of libeditline.  Test for each potentially
	missing function in configure and deal with it if it's missing.  There
	may still be an issue with autoconfiguring support for the history
	functions.
	Bug #1839048 and others 

2010-07-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/command.h src/eval.c src/fit.c src/gp_types.h
	src/plot.c src/readline.c src/stdfn.c src/syscfg.h src/term.h:
	Remove vestigial tests for DOS16 or DOS386

2010-07-29  Allin Cottrell  <cottrell@wfu.edu>
