@@ -1,156 +1,0 @@
-#
-# $Id: makefile.os9,v 1.4 2002/02/21 12:27:37 lhecking Exp $
-#
-# GNUPLOT Makefile for OS-9 and Ultra C, with X11 support
-#
-#   by Martijn Schipper 18-6-1996
-#   schipper@iri.tudelft.nl
-#
-# Original version by:
-#   oliveria@caen.engin.umich.edu
-#   Wed, 3 Jul 91 14:31:37 -0400
-#
-
-# From here, check for right paths and flags
-# Correct them, if You want
-
-# Where to send email about bugs and comments 
-EMAIL=schipper@iri.tudelft.nl
-
-# where to place gnuplot.gih helpfile
-HELPFILE = /dd/SYS/gnuplot.gih
-
-# Installation of X11 support...
-#
-# Choose one of the following variants: X11 or no X11
-# Install X11 support
-PLOTXFLAG   = -DX11
-GNUPLOT_X11 = gnuplot_X11
-# Do not support X11
-# GNUPLOT_X11 =
-# PLOTXFLAG   =
-
-# Compiler, must be ANSI compatible
-LC     = cc
-CC     = cc
-RDIR = .
-SDIR = /dd/PRJ/GNUPLOT
-
-# macros for makefile.all
-O = r
-T = ../TERM/
-D = ../DOCS/
-L = ../DOCS/LATEXTUT
-M = ../DEMO/
-
-DEBUG = -g
-#DEBUG =
-CDFLAGS = -DOSK -DPIPES -DREADLINE -DHAVE_LOCALE $(PLOTXFLAG)
-CFLAGS = $(DEBUG) -td=/h0 -tp=020ld $(CDFLAGS)
-CCFLAGS = -eas=$(RDIR)
-
-LFLAGS = -tp020scld $(DEBUG)
-
-# see other terminal defines in term.h
-TERMFLAGS = $(PLOTXFLAG)
-
-# Where to write gnuplot and gnuplot_X11
-ODIR   = /dd/USR/CMDS
-
-# Give UNIX compatibility library
-# Obsolete, Unix functions now in os9.c
-#LIBS = -l=/dd/USR/LIB/unixlib.l -l=sys_clib.l
-LIBS = -l=sys_clib.l
-
-# Where to find X-Window and socket libs
-XLIB      = /dd/MWOS/OS9/68020/LIB/X11/libX11.l
-UFLIB     = /dd/MWOS/OS9/68020/LIB/X11/uf.l
-SOCKLIB   = socklib.l
-NETLIB    = netdb.l
- 
-# X11FLAGS and X11LIBS for linking with cc, obsolete for no X11 support
-X11FLAGS = $(DEBUG) -m=64
-X11LIBS = -l=$(XLIB) -l=$(UFLIB) -l=$(NETLIB) -l=$(SOCKLIB)
-
-# From here, things should be all right
-####################################################################
-
-#
-# make complete project
-#
-gnuplot.project: $(HELPFILE) $(GNUPLOT_X11) gnuplot bf_test $(M)binary1
-	echo "gnuplot ready to go!"
-
-#
-# convert gnuplot.doc to gnuplot.gih
-#
-$(HELPFILE): doc2gih $(D)gnuplot.doc
-	$(ODIR)/doc2gih <$(D)gnuplot.doc >-$(HELPFILE)
-	attr -pr $(HELPFILE)
-
-doc2gih: $(RDIR)/doc2gih.$(O) $(RDIR)/termdoc.$(O) 
-	$(LC) $(LFLAGS) $(RDIR)/doc2gih.$(O) $(RDIR)/termdoc.$(O) -f=$(ODIR)/$@
-
-$(RDIR)/doc2gih.$(O): $(D)doc2gih.c
-	$(CC) $(CFLAGS) $(CCFLAGS) -v=$(SDIR) -v=TERM $(D)doc2gih.c
-
-$(RDIR)/termdoc.$(O): $(D)termdoc.c
-	$(CC) $(CFLAGS) $(CCFLAGS) -v=$(SDIR) -v=TERM $(D)termdoc.c
-
-#
-# For X11 support generate gnuplot_X11
-# I have only old X11 R4 libraries, that is the reason for using compatability
-# mode for compiling and linking gnuplot_x11
-#
-gnuplot_X11: $(RDIR)/gplt_x11.$(O)
-	$(LC) -mode=compat $(DEBUG) -q -m=64 $(X11LIBS) $(RDIR)/gplt_x11.$(O) \
-	$(RDIR)/stdfn.$(O) -n=$@ -f=$(ODIR)/$@
-	attr -pepr $(ODIR)/$@
-
-$(RDIR)/gplt_x11.$(O): gplt_x11.c
-	$(CC) -mode=compat -t=/r0 -q $(DEBUG) -DOS9 -v=/dd/MWOS/SRC/DEFS/X11 \
-	-v=/dd/MWOS/SRC/DEFS/ELTEC $(CDFLAGS) -r=$(RDIR) gplt_x11.c
-
-#
-# Create binary datafiles for the binary demo
-#
-$(M)binary1 $(M)binary2 $(M)binary3: bf_test
-	(chd DEMO; bf_test)
-
-BFTESTOBJS = $(RDIR)/bf_test.$(O) $(RDIR)/binary.$(O) $(RDIR)/alloc.$(O)
-
-bf_test: $(BFTESTOBJS)
-	$(LC) $(LFLAGS) $(LIBS) $(BFTESTOBJS) -f=$(ODIR)/$@
-	attr -pepr $(ODIR)/$@
-
-include makefile.all
-
-OBJS = $(COREOBJS) os9.$(O) version.$(O)
-
-#
-# Link the gnuplot program
-#
-gnuplot: $(OBJS) 
-	$(LC) $(LFLAGS) -olM=64 $(OBJS) $(LIBS) -f=$(ODIR)/$@
-	attr -pepr $(ODIR)/$@
-
-#
-# Now, produce the object files
-#
-
-# include makefile.all for the second time for simple dependencies
-include makefile.all
-
-command.$(O): command.c
-	$(CC) $(CFLAGS) -DHELPFILE=\"$(HELPFILE)\" $(CCFLAGS) command.c
-
-show.$(O): show.c
-	$(CC) $(CFLAGS) -DHELPFILE=\"($HELPFILE)\" $(CCFLAGS) show.c
-
-term.$(O): term.c $(CORETERM)
-	$(CC) $(CFLAGS) $(TERMFLAGS) -v=TERM -v=$(SDIR) $(CCFLAGS) term.c
-
-version.$(O): version.c
-	$(CC) $(CFLAGS) -DCONTACT="$(EMAIL)" $(CCFLAGS) version.c
-
-### end ###
